@@ -903,6 +903,15 @@
                 menupath=" MenuNames.RASTER"
                 install="true" />
         </menus>
+    </plug-in>
+     <plug-in>
+        org.openjump.core.ui.plugin.raster.KernelAnalysisPlugIn
+        <menus>
+            <main-menu
+                menupath=" MenuNames.RASTER"
+                install="true" />
+        </menus>
+    </plug-in>
     <!--plug-in>
         org.openjump.core.ui.plugin.raster.nodata.ChangeNoDataValuePlugIn
         <menus>
